# Wenyi-research-agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  run_analysis.py  task_request.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_update_embedding_dimension.py
examples/: api_client.py  basic_usage.py
frontend/: index.html
scripts/: run_with_llm_log.py  validate_pdf_fetch.py
skills/: code_review.md
src/agent_engine/: __init__.py  config.py  lifecycle.py  llm_logger.py  main.py
src/agent_engine/agents/: __init__.py  critic.py  domain_profile.py  entity_resolver.py  executor.py  extractor.py  graph.py  planner.py  reporter.py  state.py  validator.py
src/agent_engine/agents/domains/: biotech_finance.md  generic.md
src/agent_engine/api/: __init__.py  routes.py  schemas.py  websocket.py
src/agent_engine/budget/: __init__.py  limits.py  token_counter.py
src/agent_engine/llm/: __init__.py  base.py  minimax.py  qwen.py  router.py
src/agent_engine/memory/: __init__.py  embeddings.py  long_term.py  short_term.py
src/agent_engine/persistence/: __init__.py  checkpoint.py  models.py  repository.py
src/agent_engine/skills/: __init__.py  loader.py
src/agent_engine/tools/: __init__.py  executor.py  mcp_protocol.py  registry.py
src/agent_engine/tools/builtin/: __init__.py  code_exec.py  content_extract.py  (+5 more)
tests/: __init__.py  conftest.py
tests/test_agents/: __init__.py  test_state.py
tests/test_api/: __init__.py  test_routes.py
tests/test_tools/: test_executor.py  test_registry.py
